--- a/templates/account/email.html
+++ b/templates/account/email.html
@@ -6,7 +6,7 @@
 {% block head_title %}{% trans "E-mail Addresses" %}{% endblock %}
 
 {% block content %}
-<div class="container m-5">
+<div class="container pb-5">
     <h1>{% trans "E-mail Addresses" %}</h1>
     <div class="row">
         <div class="col">
