--- a/templates/account/logout.html
+++ b/templates/account/logout.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Sign Out" %}{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
+<div class="container pb-5">
   <div class="row">
     <div class="col">
 
