--- a/templates/account/password_change.html
+++ b/templates/account/password_change.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Change Password" %}{% endblock %}
 
 {% block content %}
-<div class="container m-5">
+<div class="container pb-5">
     <div class="row">
       <div class="col">
     
