--- a/templates/account/signup.html
+++ b/templates/account/signup.html
@@ -5,7 +5,7 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<div class="container m-5">
+<div class="container pb-5">
   <div class="row">
     <div class="col col-lg-6">
 
