--- a/templates/contact.html
+++ b/templates/contact.html
@@ -4,7 +4,7 @@
 
 
 {% block content %}
-<div class="container m-5">
+<div class="container pb-5">
     <h1 id="contact">Contact Us</h1>
     <div class="row">
         <div class="col col-lg-12">
