--- a/templates/post_create.html
+++ b/templates/post_create.html
@@ -1,7 +1,7 @@
 {% extends "base.html" %}
 {% load crispy_forms_tags %}
 {% block content %}
-<div class="container m-5">
+<div class="container pb-5">
 <div class="row">
     <div class="col">
         <form method="POST" enctype="multipart/form-data">
