--- a/templates/index.html
+++ b/templates/index.html
@@ -11,7 +11,7 @@
       <div class="container">
         <div class="row">
           <div class="col-lg-7">
-            <h1>Welcome toy our Blog</h1><a href="{% url 'home:blog' %}" class="hero-link">Discover More</a>
+            <h1>Welcome to our Blog</h1><a href="{% url 'home:blog' %}" class="hero-link">Discover More</a>
           </div>
         </div><a href=".intro" class="continue link-scroll"><i class="fa fa-long-arrow-down"></i> Scroll Down</a>
       </div>
