--- a/templates/profile.html
+++ b/templates/profile.html
@@ -4,9 +4,9 @@
 {% block content %}
 <body id="prfoile-body">
 
-<div class="container m-5">
+<div class="container pb-3">
     <div class="row gutters">
-        <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
+        <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 pb-3">
             <div class="card h-100">
                 <div class="card-body">
                     <div class="account-settings">
