--- a/templates/base.html
+++ b/templates/base.html
@@ -31,6 +31,14 @@
     <link rel="stylesheet" href="{% static 'vendor/bootstrap/css/bootstrap.css' %}">
     <!-- Favicon-->
     <link rel="shortcut icon" href="{% static 'favicon.png' %}">
+    <script id="google-analytics" type="text/javascript">
+      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+      })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+      ga('create', 'G-TTSCG3GJHY', 'test-homeblog.herokuapp.com');
+      ga('send', 'pageview');
+    </script>
  <style>
 
 .post-body img{
