--- a/templates/profile.html
+++ b/templates/profile.html
@@ -6,7 +6,7 @@
 
 <div class="container pb-3">
     <div class="row gutters">
-        <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12 pb-3">
+        <div class="col-xl-3 col-lg-3 col-md-12 col-sm-12 col-12">
             <div class="card h-100">
                 <div class="card-body">
                     <div class="account-settings">
