--- a/templates/socialaccount/signup.html
+++ b/templates/socialaccount/signup.html
@@ -6,7 +6,7 @@
 {% block head_title %}{% trans "Signup" %}{% endblock %}
 
 {% block content %}
-<div class="container m-5">
+<div class="container pb-3">
   <h1>{% trans "Sign Up" %}</h1>
   <div class="row">
 
